# dev_streamlit_tutorial

./: pyproject.toml
dev_streamlit_tutorial/: index.py
dev_streamlit_tutorial/data/: temperature.csv
dev_streamlit_tutorial/pages/: forms.py  temperature.py
