[tool.poetry]
name = "dev-streamlit-tutorial"
version = "0.1.0"
description = ""
authors = ["kurin2 <51259343+kurin2@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dev_streamlit_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
